--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
 	"pug-it": "pug src",
-	"pug-it:w": "pug src -P -w"
+	"pug-it:w": "pug src -P -w",
+	"postinstall": "ng build --aot -prod",
+	"start": "node server.js"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +25,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+	"@angular/compiler-cli": "^4.0.0",
+	"@angular-cli": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
@@ -49,5 +53,9 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  }
+  },
+  "engines": {
+  "node": "6.9.2",
+  "npm": "3.10.9"
+}
 }
