--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "e2e": "ng e2e",
 	"pug-it": "pug src",
 	"pug-it:w": "pug src -P -w",
-	"postinstall": "ng build --aot -prod",
-	"start": "node server.js"
+	"preinstall": "npm install -g http-server",
+    "postinstall": "ng build && mv dist/* ."
   },
   "private": true,
   "dependencies": {
@@ -26,10 +26,15 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
 	"@angular/compiler-cli": "^4.0.0",
-	"@angular-cli": "^4.0.0",
+	"@angular/cli": "1.1.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+	"ts-node": "~3.0.4",
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3",
+	"protractor": "~5.1.2",
+	"raw-loader": "^0.5.1"
   },
   "devDependencies": {
     "@angular/cli": "1.1.3",
