--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "http-server",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
+    "lint": "tslint \"src/**/*.ts\"",
+	"pree2e": "webdriver-manager update",
+    "e2e": "protractor",
 	"pug-it": "pug src",
 	"pug-it:w": "pug src -P -w",
 	"preinstall": "npm install -g http-server",
