--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "http-server",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "tslint \"src/**/*.ts\"",
-	"pree2e": "webdriver-manager update",
-    "e2e": "protractor",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
 	"pug-it": "pug src",
-	"pug-it:w": "pug src -P -w",
-	"preinstall": "npm install -g http-server",
-    "postinstall": "ng build && mv dist/* ."
+	"pug-it:w": "pug src -P -w"
   },
   "private": true,
   "dependencies": {
@@ -26,16 +23,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-	"@angular/compiler-cli": "^4.0.0",
-	"@angular/cli": "1.1.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-	"ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-	"protractor": "~5.1.2",
-	"raw-loader": "^0.5.1"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.1.3",
@@ -59,9 +49,5 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  },
-  "engines": {
-  "node": "6.9.2",
-  "npm": "3.10.9"
-}
+  }
 }
